test/18/expected/cleanup.out
-- cleanup.sql: Clean up the regression test environment, in particular roles 
--              (all components inside the regression database will be deleted with the regression database)
-----------------------------
-- cleanup the temporary files structure
-----------------------------
\setenv EMAJTESTTMPDIR '/tmp/emaj_'`echo $PGVER`
\! rm -Rf $EMAJTESTTMPDIR
-----------------------------
-- drop the function that checks and sets the last_value of emaj technical sequences
-----------------------------
DROP FUNCTION public.handle_emaj_sequences(INT);
-----------------------------
-- rename the tspemaj tablespace if it exists
-----------------------------
DO LANGUAGE plpgsql
$$
  BEGIN
    PERFORM 0 FROM pg_catalog.pg_tablespace WHERE spcname = 'tspemaj';
    IF FOUND THEN
      ALTER TABLESPACE tspemaj RENAME TO tspemaj_renamed;
    END IF;
  END;
$$;
-----------------------------
-- drop emaj_adm roles
-----------------------------
revoke emaj_adm from emaj_regression_tests_adm_user1, emaj_regression_tests_adm_user2;
revoke all on schema mySchema1, mySchema2, "phil's schema""3", mySchema4, mySchema5, mySchema6
  from emaj_regression_tests_adm_user1, emaj_regression_tests_adm_user2;
revoke all on all tables in schema mySchema1, mySchema2, "phil's schema""3", mySchema4, mySchema5, mySchema6
  from emaj_regression_tests_adm_user1, emaj_regression_tests_adm_user2;
revoke all on all sequences in schema mySchema1, mySchema2, "phil's schema""3", mySchema4, mySchema5, mySchema6
  from emaj_regression_tests_adm_user1, emaj_regression_tests_adm_user2;
revoke all on tablespace tsplog1, "tsp log'2", tspemaj_renamed
  from emaj_regression_tests_adm_user1, emaj_regression_tests_adm_user2;
drop role emaj_regression_tests_adm_user1, emaj_regression_tests_adm_user2;
-----------------------------
-- drop emaj_regression_tests_viewer_user role
-----------------------------
revoke all on schema mySchema1, mySchema2, "phil's schema""3", mySchema4, mySchema5, mySchema6 from emaj_regression_tests_viewer_user;
revoke all on all tables in schema mySchema1, mySchema2, "phil's schema""3", mySchema4, mySchema5, mySchema6 from emaj_regression_tests_viewer_user;
revoke all on all sequences in schema mySchema1, mySchema2, "phil's schema""3", mySchema4, mySchema5, mySchema6 from emaj_regression_tests_viewer_user;
drop role emaj_regression_tests_viewer_user;
-----------------------------
-- drop emaj_regression_tests_anonym_user role
-----------------------------
revoke all on database regression from emaj_regression_tests_anonym_user;
drop role emaj_regression_tests_anonym_user;
--------------------------------------------
-- Dump the regression database (once the test roles have been dropped)
--------------------------------------------
\! ${EMAJ_DIR}/test/${PGVER}/bin/pg_dump regression >${EMAJ_DIR}/test/${PGVER}/results/regression.dump
pg_dump: error: query failed: ERROR:  syntax error at or near "s"
LINE 1: ...ma5,myschema6,myschema6,myschema6,myschema6,"phil's schema""...
                                                             ^
pg_dump: detail: Query was: EXECUTE getAttributeStats('{emaj_myschema1,emaj_myschema1,emaj_myschema1,emaj_myschema1,emaj_myschema1,emaj_myschema2,emaj_myschema2,emaj_myschema2,emaj_myschema2,emaj_myschema2,emaj_myschema2,myschema1,myschema1,myschema1,myschema1,myschema1,myschema2,myschema2,myschema2,myschema2,myschema2,myschema2,myschema2,myschema2,myschema4,myschema4,myschema4,myschema4,myschema4,myschema4,myschema4,myschema4,myschema4,myschema5,myschema5,myschema6,myschema6,myschema6,myschema6,"phil's schema""3","phil's schema""3","phil's schema""3",emaj,emaj,emaj,emaj,emaj,emaj,emaj,emaj,emaj,emaj,emaj,emaj,emaj,emaj,emaj,emaj,emaj,emaj,emaj,emaj,emaj,emaj}'::pg_catalog.name[],'{"myTbl3_log",mytbl1_log,mytbl2_log,mytbl2b_log,mytbl4_log,"myTbl3_log",mytbl1_log,mytbl2_log,mytbl4_log,mytbl5_log,mytbl6_log,"myTbl3",mytbl1,mytbl2,mytbl2b,mytbl4,"myTbl3",mytbl1,mytbl2,mytbl4,mytbl5,mytbl6,mytbl7,mytbl8,mypartp1,mypartp2,mypartp3,mytblc1,mytblc2,mytblm,mytblp,mytblr1,mytblr2,myoidstbl,myunloggedtbl,table_with_50_characters_long_name_____0_________0,table_with_51_characters_long_name_____0_________0a,table_with_55_characters_long_name_____0_________0abcde,table_with_55_characters_long_name_____0_________0fghij,"my""tbl4","myTbl2\","phil's tbl1",emaj_group_hist_grph_group_grph_time_range_excl,emaj_group_hist_idx1,emaj_group_hist_pkey,emaj_group_pkey,emaj_hist_pkey,emaj_log_session_idx1,emaj_log_session_lses_group_lses_time_range_excl,emaj_log_session_pkey,emaj_mark_idx1,emaj_mark_pkey,emaj_param_pkey,emaj_rel_hist_idx1,emaj_rel_hist_pkey,emaj_rel_hist_relh_schema_relh_tblseq_relh_time_range_excl,emaj_relation_change_pkey,emaj_relation_idx1,emaj_relation_idx2,emaj_relation_pkey,emaj_relation_rel_schema_rel_tblseq_rel_time_range_excl,emaj_rlbk_idx1,emaj_rlbk_pkey,emaj_rlbk_plan_pkey}'::pg_catalog.name[])
